--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-lib": "ng build --configuration production",
     "buildconfig-prod": "cp -f angular.build.json angular.json",
     "buildconfig-dev": "cp -f angular.dev.json angular.json",
-    "build-storybook": "build-storybook -c .storybook -o docs",
+    "build-storybook": "build-storybook -c .storybook -o docs && npm run assets-storybook",
+    "assets-storybook": "cp -r node_modules/tinymce docs",
     "plugin-dev": "webpack --config plugin/webpack/development.config.js",
     "plugin-prod": "webpack --config plugin/webpack/production.config.js",
     "publish-lib": "cd dist/lib && npm publish",
@@ -29,6 +30,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@ordercloud/headstart-sdk": "^1.6.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -69,7 +71,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "marketplace-javascript-sdk": "^1.5.1",
     "ng-packagr": "^10.0.0",
     "ngx-spinner": "^9.0.2",
     "npm-run-all": "^4.1.5",
