use shx for build to support cross-platform devops

--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "start": "run-s buildconfig-dev app-watchmode",
     "build": "run-s buildconfig-prod plugin-prod build-lib buildconfig-dev move-scripts build-storybook",
-    "move-scripts": "cp plugin/dist/plugin.min.js dist/lib/plugin.min.js",
+    "move-scripts": "shx cp plugin/dist/plugin.min.js dist/lib/plugin.min.js",
     "app-watchmode": "run-p plugin-dev storybook",
     "storybook": "start-storybook -p 6006",
     "build-lib": "ng build --configuration production",
-    "buildconfig-prod": "cp -f angular.build.json angular.json",
-    "buildconfig-dev": "cp -f angular.dev.json angular.json",
+    "buildconfig-prod": "shx cp -f angular.build.json angular.json",
+    "buildconfig-dev": "shx cp -f angular.dev.json angular.json",
     "build-storybook": "build-storybook -c .storybook -o docs && npm run assets-storybook",
-    "assets-storybook": "cp -r node_modules/tinymce docs",
+    "assets-storybook": "shx cp -r node_modules/tinymce docs",
     "plugin-dev": "webpack --config plugin/webpack/development.config.js",
     "plugin-prod": "webpack --config plugin/webpack/production.config.js",
     "publish-lib": "cd dist/lib && npm publish",
@@ -76,6 +76,7 @@
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "publish-please": "^5.5.1",
+    "shx": "^0.3.2",
     "slick-carousel": "^1.8.1",
     "tinymce": "^5.4.1",
     "ts-node": "~8.3.0",
