good stopping point (for now) for page-list

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
-    "@ordercloud/headstart-sdk": "^1.6.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -48,6 +47,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ordercloud/headstart-sdk": "^1.6.2",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addon-notes": "^5.3.19",
@@ -74,6 +74,7 @@
     "ng-packagr": "^10.0.0",
     "ngx-spinner": "^9.0.2",
     "npm-run-all": "^4.1.5",
+    "ordercloud-javascript-sdk": "4.0.0-12",
     "protractor": "~7.0.0",
     "publish-please": "^5.5.1",
     "shx": "^0.3.2",
