add page renderer

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "version": "1.0.0-beta.4",
   "scripts": {
-    "start": "run-s buildconfig-dev app-watchmode",
-    "build": "run-s buildconfig-prod plugin-prod build-lib buildconfig-dev move-scripts build-storybook",
+    "start": "run-s copy-constants buildconfig-dev app-watchmode",
+    "build": "run-s copy-constants buildconfig-prod plugin-prod build-lib buildconfig-dev move-scripts build-storybook",
+    "copy-constants": "shx cp plugin/src/constants/widget.constants.ts projects/lib/src/shared/constants/widget.constants.ts",
     "move-scripts": "shx cp plugin/dist/plugin.min.js dist/lib/plugin.min.js",
     "app-watchmode": "run-p plugin-dev storybook",
     "storybook": "start-storybook -p 6006",
@@ -56,6 +57,7 @@
     "@tinymce/tinymce-angular": "^4.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.1",
     "@types/node": "^14.0.22",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
