--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@contentful/mimetype": "^1.3.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ordercloud/headstart-sdk": "^1.6.7",
     "@storybook/addon-actions": "^5.3.19",
