--- a/docs/tinymce/package.json
+++ b/docs/tinymce/package.json
@@ -2,7 +2,7 @@
   "_args": [
     [
       "tinymce@5.4.1",
-      "C:\\Users\\CrhistianR\\Documents\\Repos\\angular-cms-components"
+      "C:\\Users\\cyr\\Documents\\repos\\angular-cms-components"
     ]
   ],
   "_development": true,
@@ -27,7 +27,7 @@
   ],
   "_resolved": "https://registry.npmjs.org/tinymce/-/tinymce-5.4.1.tgz",
   "_spec": "5.4.1",
-  "_where": "C:\\Users\\CrhistianR\\Documents\\Repos\\angular-cms-components",
+  "_where": "C:\\Users\\cyr\\Documents\\repos\\angular-cms-components",
   "author": {
     "name": "Ephox Corporation"
   },
